# Simengne_Lua_BehaviorTree

./: CMakeLists.txt  README.md
.trae/documents/: auto_create_script_manager_plan.md  batch_lua_nodes_registration_plan.md  behavior_tree_scheduler_analysis_plan.md  btscript_xml_params_plan.md  consolidate_lua_bt_nodes_plan.md  consolidate_lua_files_plan.md  cpp_modify_script_params_plan.md  cpp_only_script_management_plan.md  cpp_preload_plan.md  dead_code_cleanup_plan.md  entity_behavior_scheduler_plan.md  entity_script_buffer_overflow_analysis.md  entity_script_variable_isolation_plan.md  external_scheduler_behavior_tree_plan.md  global_lua_nodes_registry_plan.md  lua_binding_singleton_entity_variables_plan.md  lua_bt_node_params_plan.md  lua_script_manager_plan.md  lua_sim_control_plan.md  lua_vector_ipairs_fix_plan.md  multi_script_loading_plan.md  node_registration_order_plan.md  obstacle_avoidance_plan.md  refactor_lua_behavior_tree_nodes.md  remove_lazy_loading_and_sync_bt_plan.md  remove_lazy_loading_plan.md  scheduler_removal_plan.md  script_state_storage_plan.md  simcontrol_singleton_plan.md  simcontrolinterface_scriptparam_cpp11_plan.md  simcontrolinterface_scriptparam_plan.md  simple_script_state_plan.md  singleton_refactor_plan.md  sync_action_node_examples_plan.md  tactics_hybrid_plan.md  tactics_implementation_comparison_plan.md  update_movement_with_sim_interface_plan.md  vehicle_id_integration_plan.md  xml_loading_switch_plan.md  xml_preload_only_plan.md
.trae/specs/add-behavior-tree-path-movement/: checklist.md  spec.md  tasks.md
.trae/specs/add-behavior-tree-tick-scheduler/: checklist.md  spec.md  tasks.md
.trae/specs/add-entity-control/: checklist.md  spec.md  tasks.md
.trae/specs/integrate-lua-behavior-tree/: checklist.md  spec.md  tasks.md
.trae/specs/refactor-global-external-tick-scheduler/: checklist.md  spec.md  tasks.md
bt_xml/: async_square_path.xml  entity_behavior.xml  lua_custom_nodes_example.xml  lua_nodes_with_params.xml  lua_stateful_nodes.xml  obstacle_avoidance.xml  path_movement.xml  square_path.xml  square_path_composite.xml  waypoint_patrol.xml
cmake/: BehaviorTree.cmake  lua.cmake
docs/: behavior_tree_xml_reference.md  debugging_guide.md  lua_behavior_tree_examples.md  lua_bind.md  lua_call.md
examples/: cpp_modify_script_params_example.cpp  external_scheduler_example.cpp  manual_scheduler_example.cpp  manual_tick_integration.cpp  obstacle_avoidance_example.cpp  per_instance_frequency_example.cpp
include/behaviortree/: AsyncMoveToPoint.h  BehaviorTreeExecutor.h  BehaviorTreeScheduler.h  BlackboardKeys.h  CheckEntityExists.h  EntityMovement.h  FollowPath.h  MoveToPoint.h  SelectTargetFromList.h  SimControllerPtr.h
include/scripting/: BTScript.h  EntityScriptManager.h  LuaBehaviorTreeBridge.h  LuaBehaviorTreeNodes.h  LuaSimBinding.h  LuaStatefulActionNode.h  Script.h  TacticalScript.h
include/simulation/: MockSimController.h  SimControlInterface.h
scripts/: advanced_control.lua  async_bt_example.lua  bt_advanced_example.lua  bt_blackboard_example.lua  bt_control_example.lua  bt_custom_node_example.lua  bt_custom_node_from_file.lua  bt_lua_node_with_params.lua  bt_nodes_registry.lua  bt_stateful_action_example.lua  entity_behavior.lua  entity_control_test.lua  example_bt_advanced.lua  example_bt_basic.lua  example_bt_lua_nodes.lua  example_control.lua  example_sim_control.lua  load_lua_nodes_xml.lua  obstacle_avoidance_nodes.lua
scripts/examples/: bt_hybrid_patrol.lua  patrol_with_dynamic_waypoints.lua  script_manager_demo.lua  tactical_auto_attack.lua
src/: main.cpp
src/behaviortree/: AsyncMoveToPoint.cpp  BehaviorTreeExecutor.cpp  BehaviorTreeScheduler.cpp  CMakeLists.txt  CheckEntityExists.cpp  EntityMovement.cpp  FollowPath.cpp  MoveToPoint.cpp  SelectTargetFromList.cpp
src/scripting/: BTScript.cpp  CMakeLists.txt  EntityScriptManager.cpp  LuaBehaviorTreeBridge.cpp  LuaBehaviorTreeNodes.cpp  LuaSimBinding.cpp  LuaStatefulActionNode.cpp  Script.cpp  TacticalScript.cpp
src/simulation/: CMakeLists.txt  MockSimController.cpp  SimControlInterface.cpp
